made the page responsive.

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h1 {
     font-size: 1rem;
     font-family: inherit;
     font-weight: 500;
-    color: white;
+    color: #fff;
     text-decoration: none;
     text-transform: uppercase;
     background-color: #7104e2;
@@ -95,5 +95,14 @@ h1 {
     align-items: flex-start;
 }
 
+@media (max-width: 1000px) {
+    .section{
+        padding: 50px 20px;
+    }
+
+    .grid {
+        grid-template-columns: 1fr;
+    }  
+}
 
     
